Stop code sample lines wrapping

--- a/assets/sass/base/_code.sass
+++ b/assets/sass/base/_code.sass
@@ -1,3 +1,10 @@
+pre
+    overflow: auto
+    word-wrap: no-wrap
+
+pre code
+    white-space: pre
+
 code.hljs
     background-color: inherit
     padding: 0
